css Modules 及sass配置

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -7,6 +7,7 @@ html,body {
     height: 100%;
     margin: 0;
     padding:0;
+    background: red;
 }
 
 *,
@@ -14,7 +15,7 @@ html,body {
 *:after {
     box-sizing: inherit;
 }
-
+/*:global(.test){background: blue}*/
 html {
     font-size: var(--font-size-root);
     /*max-width:640px;    !* 设置最大宽度 *!*/
@@ -24,7 +25,6 @@ html {
 
 body {
     font-family: var(--font-family-base);
-    background-color: var(--body-bg);
     font-size: var(--font-size-base);
     line-height: var(--line-height);
     color: var(--body-color);
